--- a/api/package.json
+++ b/api/package.json
@@ -13,13 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^6.15.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.22.0"
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
