--- a/socket/package.json
+++ b/socket/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
